# BU_Master

DSC530_Fundamentals/Hands-On-Data-Analysis-with-Pandas-2nd-edition-master/: DSC_530_Week_11_Project_Iman_Paula.ipynb  DSC_530_Week_3-4_Assignment_Iman_Paula.ipynb  DSC_530_Week_5-6_Assignment_Iman_Paula.ipynb  DSC_530_Week_7-8_Assignment_Iman_Paula.ipynb
DSC530_Fundamentals/Hands-On-Data-Analysis-with-Pandas-2nd-edition-master/ch_01/: checking_your_setup.ipynb  exercises.ipynb  introduction_to_data_analysis.ipynb  python_101.ipynb
DSC530_Fundamentals/Hands-On-Data-Analysis-with-Pandas-2nd-edition-master/ch_02/: 1-pandas_data_structures.ipynb  2-creating_dataframes.ipynb  3-making_dataframes_from_api_requests.ipynb  4-inspecting_dataframes.ipynb  5-subsetting_data.ipynb  6-adding_and_removing_data.ipynb  DSC530_Week 3 & 4_Assignment_Iman_Paula.ipynb  Exercise_ch_02.ipynb  (+1 more)
DSC540_Data_Preparation/: .gitignore  DSC540_Project_Week_11_Iman_P.ipynb  DSC540_Weeks_3and4_Iman_P.ipynb  DSC540_Weeks_5and6_Iman_P.ipynb  contacts_data.db
DSC540_Data_Preparation/.ipynb_checkpoints/: DSC540_Project_Milestone_2_Iman_P-checkpoint.ipynb  DSC540_Weeks_1and2_Iman_P-checkpoint.ipynb  DSC540_Weeks_3and4_Iman_P-checkpoint.ipynb  DSC540_Weeks_5and6_Iman_P-checkpoint-checkpoint.ipynb  DSC540_Weeks_5and6_Iman_P-checkpoint.ipynb
DSC540_Data_Preparation/pydata-book-3rd-edition/: DSC540_Weeks_1and2_Iman_P.ipynb  PRACTICE.ipynb  README.md  Untitled.ipynb  appa.ipynb  ch02.ipynb  ch06.ipynb  pyproject.toml
DSC540_Data_Preparation/pydata-book-3rd-edition/datasets/: world-population.xlsm
(+105 files in other folders)
